# old-projects

./: Makefile.am  TODO  aclocal.m4  config.cache  configure  configure.files  configure.in  configure.in.in  kdoors.lsm  libtool
admin/: ltcf-c.sh  ltcf-gcj.sh  mkinstalldirs
crawler/crawler/: .project  fonctions.php_old  index.php  results.php  style.css  task_01-crawl.php  task_01-link.php  task_02-link.php  task_03-word.php  task_all.php  task_extractdata.php  task_site.php  task_taskpage.php  task_test.php  test.html
crawler/crawler/backup/: schema_20080724.sql
crawler/crawler/client/: conf.php  queue.php  task-queue.php  tasks.php
crawler/crawler/client/database/: bl_link.php  bl_page.php  bl_word.php  db_link.php  db_page.php  db_site.php  db_word.php
crawler/crawler/commons/: database.php  fonctions.php
crawler/crawler/server/: conf.php  link.php
doc/: Makefile
kdoors/: AUTHORS  DlgIpRange.ui  Makefile  Makefile.am  Makefile.in  Untitled  acinclude.m4  config.h  config.status  frmparamplugins.h  kdfrmlistplugins.cpp  kdfrmlistplugins.h  kdfrmparamplugins.cpp  kdfrmparamplugins.h  kdhostview.cpp  kdhostview.h  kdoors.h  kdoors.kdevprj  kdoorsview.moc.cpp  kdpluginslistbox.h  kdresultview.cpp  kplugins.cpp  kresolvename.cpp  main.cpp  subdirs
kdoors/admin/: am_edit  ltcf-cxx.sh
kdoors/doc/: Makefile.in
kdoors/doc/en/: Makefile  Makefile.am  Makefile.in
kdoors/kdoors/: DlgIpRange.cpp  DlgIpRange.h  Makefile  frmparamplugins.moc.cpp  frmparamplugins.ui  generate  kdhostitem.cpp  kdhostitem.h  kdoors.cpp  kdoorsui.rc  kdpluginslistbox.cpp  kdresultview.h  kplugins.h  kresolvename.h
kdoors/scripts/: ftp_overflow  what_server.c
magneto-0.1/: .tm_project.cache  Magneto.prj  Magneto.prj.bak  Magneto.pws  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  confdefs.h  config.cache  config.h  config.h.in  config.status  configure  configure.in  magneto.pws
magneto-0.1/src/: Makefile  Makefile.am  Makefile.in  canvas.cc  canvas.h  data.cc  data.h  ecran.cc  ecran.h  font.cc  font.h  graphics.cc  graphics.h  image.cc  image.h  magneto  main.cc  menu.cc  menu.h  osd.cc  osd.h
magneto-0.1/src/components/: canvas.cc  canvas.h  data.cc  data.h  font.cc  font.h  graphics.cc  graphics.h  image.cc  image.h  menu.cc  menu.h
po/: Makefile  Makefile.in
repondeur/: dtmf.sh  dtmf.sh~  say_numbers.pl  say_numbers.sh
repondeur/messages/: Index  get-code.rmd  goodbye.rmd  incorrect.rmd  menuprincipal.rmd
repondeur/voix/www.frenchecole.demon.co.uk/sounds/: index.html
scripts/: check_url  mysql_anonymous_password  what_server
spider.Net/: FileIcon.cs  FileSpider.cs  Form1.cs  Form1.resx  Indexer.cs  Spider.csproj  Spider.sln  database.cs  keyword.cs
