## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =

CXXFLAGS =\
	 -Wall -Wimplicit -Wreturn-type -Wunused -Wswitch -Wcomment -Wuninitialized -Wparentheses -Wtraditional -Wpointer-arith -Wmissing-prototypes\
	 -O1\
	 -g

bin_PROGRAMS = magneto

magneto_SOURCES = \
	main.cc\
	osd.cc\
	ecran.cc\
	graphics.cc\
	font.cc\
	menu.cc\
	data.cc\
	image.cc\
	canvas.cc

magneto_LDFLAGS = 

magneto_LDADD = \
	 -lpthread -lSDL -lSDL_image -lSDL_ttf

